# code_review_ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: cache.py  config.py  dependencies.py  main.py  models.py
app/services/: github.py  github_service.py  openai.py  openai_service.py  review.py  review_service.py
tests/: test_review.py
