[tool.poetry]
name = "code_review_ai"
version = "0.1.0"
description = "Auto-Review Tool for Code Assignments"
authors = ["Tim Widow <ex.timwidow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13.0"
fastapi = "^0.115.4"
httpx = "^0.27.2"
redis = "^5.2.0"
openai = "^1.52.2"
python-dotenv = "^1.0.1"
starlette = "^0.41.2"
uvicorn = "^0.32.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"